@@ -51,14 +51,23 @@ public class BinaryContentService {
         return BinaryContentDTO.fromEntity(binaryContent);
     }
 
+
+
     public List<BinaryContentResponseDTO> findAllByIdIn(List<UUID> binaryContentIds){
         if(binaryContentIds.isEmpty()){
             return List.of();
         }
         return binaryContentRepository.findAllByIdIn(binaryContentIds).stream()
                 .map(BinaryContentResponseDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    public List<BinaryContentResponseDTO> findAllByUserId(UUID userId){
+        return binaryContentRepository.findAllByUserId(userId).stream()
+                .map(BinaryContentResponseDTO::fromEntity)
+                .toList();
+    }
+
 
     public void delete(UUID binaryContentId){
         // id 기준 으로 조회
